--- a/PharmacyInformationSystem/PharmacyAPI/PharmacyAPI.csproj
+++ b/PharmacyInformationSystem/PharmacyAPI/PharmacyAPI.csproj
@@ -17,14 +17,11 @@
     </PackageReference>
     <PackageReference Include="Npgsql" Version="5.0.10" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+    <PackageReference Include="RestSharp" Version="106.13.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Pharmacy\PharmacyClassLib.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
 
 
