--- a/PharmacyInformationSystem/PharmacyAPI/PharmacyAPI.csproj
+++ b/PharmacyInformationSystem/PharmacyAPI/PharmacyAPI.csproj
@@ -24,5 +24,9 @@
     <ProjectReference Include="..\Pharmacy\PharmacyClassLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 </Project>
