feat: add medication specification report

--- a/PharmacyInformationSystem/Pharmacy/PharmacyClassLib.csproj
+++ b/PharmacyInformationSystem/Pharmacy/PharmacyClassLib.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Npgsql" Version="5.0.10" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
+    <PackageReference Include="Spire.PDF" Version="7.11.1" />
     <PackageReference Include="SSH.NET" Version="2020.0.1" />
   </ItemGroup>
 
