--- a/PharmacyInformationSystem/PharmacyAPI/Properties/launchSettings.json
+++ b/PharmacyInformationSystem/PharmacyAPI/Properties/launchSettings.json
@@ -1,5 +1,4 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -8,23 +7,29 @@
       "sslPort": 0
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "pharmacy",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "USERNAME": "postgres",
+        "SERVER": "localhost",
+        "DATABASE": "Pharmacy",
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "PORT": "5432",
+        "PASSWORD": "admin"
       }
     },
     "WebApplication1": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
