feat: Tendering feature
* feat: Tendering development and tests

feat: Pharmacy Offer repository and model

feat: Pharmacy offer service

feat: Adding tendering controller

feat: Tendering checking quantity and ID validation

feat: Removing medication references from offers and listing offers by pharmacy

feat: Env variables

fix: Offer tests init

fix: DB Context fix

* fix: Code clean-up and test hotfix

--- a/PharmacyInformationSystem/Pharmacy/PharmacyClassLib.csproj
+++ b/PharmacyInformationSystem/Pharmacy/PharmacyClassLib.csproj
@@ -23,4 +23,10 @@
     <PackageReference Include="SSH.NET" Version="2020.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Properties\launchSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
