--- a/PharmacyInformationSystem/PharmacyAPI/Properties/launchSettings.json
+++ b/PharmacyInformationSystem/PharmacyAPI/Properties/launchSettings.json
@@ -1,5 +1,4 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -8,12 +7,18 @@
       "sslPort": 0
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "pharmacy",
       "environmentVariables": {
+        "DB_USER": "postgres",
+        "DB_NAME": "Pharmacy",
+        "DB_PORT": "5432",
+        "DB_PASSWORD": "2331",
+        "SERVER": "localhost",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
@@ -21,10 +26,10 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
