--- a/PharmacyInformationSystem/PharmacyTests/PharmacyTests.csproj
+++ b/PharmacyInformationSystem/PharmacyTests/PharmacyTests.csproj
@@ -25,4 +25,10 @@
     <ProjectReference Include="..\PharmacyAPI\PharmacyAPI.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Properties\launchSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
