feat: Tendering feature
* feat: Tendering development and tests

feat: Pharmacy Offer repository and model

feat: Pharmacy offer service

feat: Adding tendering controller

feat: Tendering checking quantity and ID validation

feat: Removing medication references from offers and listing offers by pharmacy

feat: Env variables

fix: Offer tests init

fix: DB Context fix

* fix: Code clean-up and test hotfix

--- a/PharmacyInformationSystem/PharmacyAPI/PharmacyAPI.csproj
+++ b/PharmacyInformationSystem/PharmacyAPI/PharmacyAPI.csproj
@@ -40,5 +40,12 @@
 		<Protobuf Include="Protos\model.proto" GrpcServices="None" />
 		<Protobuf Include="Protos\grpcService.proto" GrpcServices="Server" />
 	</ItemGroup>
+  
+  <ItemGroup>
+    <None Update="Properties\launchSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
