--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     environment:
       POSTGRES_PASSWORD: "root"
       POSTGRES_USER: "postgres"
-    ports:do
+    ports:
       - "5432:5432"
 
 networks:
