--- a/Compose/api_gateway.conf
+++ b/Compose/api_gateway.conf
@@ -1,9 +1,13 @@
 upstream pharmacy {
-    zone upstream-smartTutorApp 64k;
+    zone upstream-pharmacy 64k;
     least_conn;
     server pharmacy:80 max_fails=3 fail_timeout=60 weight=1;
 }
-
+upstream patients-portal {
+    zone upstream-patients-portal 64k;
+    least_conn;
+    server patients-portal:80 max_fails=3 fail_timeout=60 weight=1;
+}
 
 
 server {
@@ -11,12 +15,20 @@ server {
 
     listen 8080 default_server;
 
+    
+
+    location /patients-front/ {
+        root   /usr/share/nginx/html/patients;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
+
     location / {
         root   /usr/share/nginx/html/app;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
-
+    
 
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
@@ -27,4 +39,11 @@ server {
         proxy_pass http://pharmacy;
         rewrite ^/pharmacy/(.*)$ /$1 break;
     }
-}
+
+     location /patients-portal {
+        proxy_pass http://patients-portal;
+        rewrite ^/patients-portal/(.*)$ /$1 break;
+    }
+
+    }
+
