--- a/Compose/api_gateway.conf
+++ b/Compose/api_gateway.conf
@@ -17,13 +17,14 @@ server {
 
     
 
-    location /patients-front/ {
+    #location /patients-front/ {
+    location / {
         root   /usr/share/nginx/html/patients;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
-    location / {
+    location /pharmacy-front {
         root   /usr/share/nginx/html/app;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
