feat: Added nginx routing for pharmacy and patients portal

--- a/Compose/api_gateway.conf
+++ b/Compose/api_gateway.conf
@@ -1,50 +1,45 @@
-upstream pharmacy {
-    zone upstream-pharmacy 64k;
-    least_conn;
-    server pharmacy:80 max_fails=3 fail_timeout=60 weight=1;
-}
 upstream patients-portal {
     zone upstream-patients-portal 64k;
     least_conn;
     server patients-portal:80 max_fails=3 fail_timeout=60 weight=1;
 }
 
+upstream pharmacy {
+    zone upstream-pharmacy 64k;
+    least_conn;
+    server pharmacy:80 max_fails=3 fail_timeout=60 weight=1;
+}
 
 server {
     access_log /var/log/nginx/api_access.log main;
 
     listen 8080 default_server;
-
     
-
-    location /patients-front/ {
-    #location / {
-        root   /usr/share/nginx/html/patients;
-        index  index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
-
     location / {
-        root   /usr/share/nginx/html/app;
-        index  index.html index.htm;
+        alias /usr/share/nginx/html/patients-portal/;
+        index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
-    
 
+    location /pharmacy-front/ {
+        alias /usr/share/nginx/html/pharmacy/;
+        index index.html index.htm;
+        try_files $uri $uri/ /pharmacy-front/index.html;
+    }
+    
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
+    }
+
+    location /patients-portal {
+        proxy_pass http://patients-portal;
+        rewrite ^/patients-portal/(.*)$ /$1 break;
     }
 
     location /pharmacy {
         proxy_pass http://pharmacy;
         rewrite ^/pharmacy/(.*)$ /$1 break;
     }
-
-     location /patients-portal {
-        proxy_pass http://patients-portal;
-        rewrite ^/patients-portal/(.*)$ /$1 break;
-    }
-
-    }
+}
 
