--- a/Compose/docker-compose.yml
+++ b/Compose/docker-compose.yml
@@ -1,13 +1,11 @@
 version: '3.4'
 
 services:
-  pharmacy-front:
+  fronts:
       build:
         context: .
-        dockerfile: Dockerfile_Pharmacy
+        dockerfile: Dockerfile_fronts
         target: gatewayWithFront
-        #args:
-        #  - SMART_TUTOR_API_URL=http://localhost:8080/api/
       restart: on-failure
       networks:
         - pharmacy-application_net
@@ -17,20 +15,6 @@ services:
       depends_on:
         - pharmacy
         - patients-portal
-  # patients-front:
-  #     build:
-  #       context: .
-  #       dockerfile: Dockerfile_Patients
-  #       target: gatewayWithFront
-  #       args:
-  #         - SMART_TUTOR_API_URL=http://localhost:5111/api/
-  #     restart: on-failure
-  #     networks:
-  #       - patients-application_net
-  #     ports:
-  #       - "8086:8080"
-  #     depends_on:
-  #       - patients-portal
 
   pharmacy:
     image: psw8org/pharmacy-back:latest
@@ -73,6 +57,7 @@ services:
     #extra hosts can be used for standalone SQL Server or services at the dev PC
     depends_on:
       - database-patients
+  
   integrations:
     image: psw8org/integration-app:latest
     networks:
@@ -105,6 +90,7 @@ services:
       POSTGRES_USER: "postgres"
     ports:
       - "7083:5432"
+
   database-pharmacy:
     image: postgres:13
     restart: always
@@ -116,6 +102,7 @@ services:
       POSTGRES_USER: "postgres"
     ports:
       - "7081:5432"
+
   database-integration:
     image: postgres:13
     restart: always
