--- a/Compose/api_gateway.conf
+++ b/Compose/api_gateway.conf
@@ -10,6 +10,12 @@ upstream pharmacy {
     server pharmacy:80 max_fails=3 fail_timeout=60 weight=1;
 }
 
+upstream integration {
+    zone upstream-integration 64k;
+    least_conn;
+    server integration:80 max_fails=3 fail_timeout=60 weight=1;
+}
+
 server {
     access_log /var/log/nginx/api_access.log main;
 
@@ -26,6 +32,12 @@ server {
         index index.html index.htm;
         try_files $uri $uri/ /pharmacy-front/index.html;
     }
+
+    location /manager-front/ {
+        alias /usr/share/nginx/html/manager/;
+        index index.html index.htm;
+        try_files $uri $uri/ /manager-front/index.html;
+    }
     
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
@@ -40,6 +52,11 @@ server {
     location /pharmacy {
         proxy_pass http://pharmacy;
         rewrite ^/pharmacy/(.*)$ /$1 break;
+    }
+
+    location /integration {
+        proxy_pass http://integration;
+        rewrite ^/integration/(.*)$ /$1 break;
     }
 }
 
