Revert "Squashed commit of the following:"
This reverts commit 0b1f9015b9f5e992b96affaaf90051ae56e99474.

--- a/PharmacyInformationSystem/PharmacyAPI/PharmacyAPI.csproj
+++ b/PharmacyInformationSystem/PharmacyAPI/PharmacyAPI.csproj
@@ -33,6 +33,10 @@
     <ProjectReference Include="..\Pharmacy\PharmacyClassLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<Protobuf Include="Protos\model.proto" GrpcServices="None" />
 		<Protobuf Include="Protos\grpcService.proto" GrpcServices="Server" />
