--- a/PharmacyInformationSystem/PharmacyAPI/Properties/launchSettings.json
+++ b/PharmacyInformationSystem/PharmacyAPI/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "DB_USER": "postgres",
         "DB_NAME": "Pharmacy",
         "DB_PORT": "5432",
-        "DB_PASSWORD": "admin",
+        "DB_PASSWORD": "root",
         "SERVER": "localhost",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
