--- a/PharmacyInformationSystem/PharmacyAPI/Properties/launchSettings.json
+++ b/PharmacyInformationSystem/PharmacyAPI/Properties/launchSettings.json
@@ -14,11 +14,15 @@
       "launchBrowser": true,
       "launchUrl": "pharmacy",
       "environmentVariables": {
+        "EMAIL_PASSWORD": "pswFtnOrganisation8",
         "DB_USER": "postgres",
         "DB_NAME": "Pharmacy",
         "DB_PORT": "5432",
-        "DB_PASSWORD": "admin",
+        "DB_PASSWORD": "root",
         "SERVER": "localhost",
+        "EMAIL_HOST": "smtp-mail.outlook.com",
+        "EMAIL_PORT": "587",
+        "EMAIL_USERNAME": "psworganisation8@outlook.com",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
