--- a/PharmacyInformationSystem/PharmacyAPI/Properties/launchSettings.json
+++ b/PharmacyInformationSystem/PharmacyAPI/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "DB_USER": "postgres",
         "DB_NAME": "Pharmacy",
         "DB_PORT": "5432",
-        "DB_PASSWORD": "root",
+        "DB_PASSWORD": "pass",
         "SERVER": "localhost",
         "EMAIL_HOST": "smtp-mail.outlook.com",
         "EMAIL_PORT": "587",
